# zkcard-mini-sdk

./: .gitignore  Cargo.toml  Makefile  README.md
precompile/: Cargo.toml
precompile/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
