[package]
name = "zkcard_precompile"
version = "0.1.0"
authors = ["FindoraNetwork"]
edition = "2021"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "ZKCARD precompiles for EVM module."
readme = "README.md"


[dependencies]
ethereum = { version = "0.14.0", default-features = false, features = ["with-serde"] }
ethereum-types = "0.14.0"
evm = { version = "0.37.0", default-features = false, features = ["with-serde"] }


evm-precompile-utils = { package = "evm-precompile-utils", git = "http://github.com/FindoraNetwork/platform.git", branch = "new_develop_evm_upgrade" }
eth-utils = { git = "https://github.com/rust-util-collections/eth-utils", tag = "ruc-v0.0.8", features = ["with_common_precompiles"] }


tracing = "0.1"
num = { version = "0.3", features = ["alloc"] }
num_enum = { version = "0.5.4", default-features = false }
slices = "0.2.0"
rand = "0.8"
base64 = "0.12"
hex = "0.4.3"


barnett-smart-card-protocol = { git = "https://github.com/FindoraNetwork/findora-poker.git", branch = "add_only_function" }
proof-essentials = { git = "https://github.com/FindoraNetwork/findora-poker.git", branch = "add_only_function" }


ark-std = { version = "0.4.0", features = ["std"] }
ark-ec = "0.4.0"
ark-serialize = "0.4.0"
ark-ff = "0.4.0"
ark-bn254 = "0.4.0"
