[package]
name = "zkcard_wasm"
version = "0.1.0"
authors = ["FindoraNetwork"]
edition = "2021"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "ZKCARD wasm for EVM module."
readme = "README.md"


[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
wasm-bindgen = { version = "0.2.86" }
serde-wasm-bindgen = "0.5.0"
js-sys =  { version = "0.3.61" }
web-sys = { version = "0.3.61", features =  ["console"] }


serde = { version = "1.0.163", features = ["derive"]}
num = { version = "0.3", features = ["alloc"] }
num_enum = { version = "0.5.4", default-features = false }
slices = "0.2.0"
rand = "0.8"
base64 = "0.12"
hex = "0.4.3"


barnett-smart-card-protocol = { git = "https://github.com/FindoraNetwork/findora-poker.git", branch = "add_only_function" }
proof-essentials = { git = "https://github.com/FindoraNetwork/findora-poker.git", branch = "add_only_function" }


ark-bn254 = "0.4.0"
ark-std = { version = "0.4.0", features = ["std"] }
ark-ec = "0.4.0"
ark-serialize = "0.4.0"
ark-ff = "0.4.0"


[features]
default = []
js_log = []
